infra/overlays/base/apps/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: demo
spec:
  ports:
    - port: 80
      targetPort: 5678
  selector:
    app: hello
